# optimalgiv

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/: CI_README.md
.github/workflows/: ci.yml
examples/: simdata1.csv
optimalgiv/: Project.toml  __init__.py  _bridge.py  _pca.py  juliapkg.json
scripts/: test_ci_locally.sh
tests/: test_against_julia_results.py  test_estimates.py  test_julia_python_comparison.py  test_pca_interface.py  test_simulation_interface.py
tests/julia_comparison/: Project.toml  run_julia_tests.jl
